Adicionei a estrutura inicial do HTML

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
+    <header style="">GERADOR DE SENHAS</header>
+    <div class="container">
+        <div class="passwordContainer">
+            <p id="password">Gere a sua senha</p>
+        </div>
+        <div class="btnContainer">
+            <button class="button" id="generate">Gerar</button>
+            <button class="button" id="copyBtn">Copiar</button>
+        </div>
+    </div>
 
 
     <script src="script.js"></script>
