--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header style="">GERADOR DE SENHAS</header>
+    <header>GERADOR DE SENHAS</header>
     <div class="container">
         <div class="passwordContainer">
             <p id="password">Gere a sua senha</p>
